# pnp-game

./: README.md  setup.cfg
assets/: pnp_game.tiled-project  seasonal0.tsx  sky0.tsx  tux_bros.tsx  tux_bros_collect.tsx
assets/images/: tux_bros.xcf
assets/tiled_maps/: igloo0.tmx  test0.json  test0.tmj  test0.tmx  test1.json
platformer/: constants.py  example.py  logger.py
platformer/entities/: __init__.py  player.py  robot.py
platformer/views/: view_character_select.py  view_game.py  view_game_over.py  view_main_menu.py
tests/: test_main.py
