[metadata]
name = pnp-game
description = A platformer game created with Python and the Arcade library.
long_description = file: README.md
author = Ethan Ho
author-email = ethan.n.ho@gmail.com
license = MIT
license-file = LICENSE
url = https://github.com/ethho/pnp-game

classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Games/Entertainment :: Side-Scrolling/Arcade Games

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires =
  setuptools >= 40.6
  pip >= 10
install_requires =
  arcade >= 2.6.0

[options.packages.find]
include =
  platformer
  platformer.*

[options.extras_require]
dev =
  flake8
  black
  isort<5,>=4.2.5

[bdist_wheel]
universal=0

[coverage:run]
branch = True

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
exclude = .git,__pycache__,__init__.py,.mypy_cache,.pytest_cache

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88